fix: resolve naming mistake on dto struct tag and swagger documentation, update query to correctly update data
